assets/landing_bus.less
/* ... */
.spacer-24 {
    min-width: 24px;
    min-height: 24px;
}

.spacer-32 {
    min-width: 32px;
    min-height: 32px;
}

.spacer-36 {
    min-width: 36px;
    min-height: 36px;
}

.spacer-64 {
    min-width: 64px;
    min-height: 64px;
}

.spacer-72 {
    min-width: 72px;
    min-height: 72px;
}

.spacer-128 {
    min-width: 128px;
    min-height: 128px;
}

.spacer-192 {
    min-width: 192px;
    min-height: 192px;
}

header {
    display: block;
    background: hsl(245deg 23% 15% / 50%);
    backdrop-filter: blur(10px);
    position: fixed;
    z-index: 10;
    top: 0px;
    left: 0px;
    right: 0px;
    will-change: transform;

    .max-width-wrapper {
        display: flex;
        -webkit-box-pack: end;
        justify-content: flex-end;
        -webkit-box-align: baseline;
        align-items: baseline;
        padding-top: 16px;
        padding-bottom: 16px;
        text-shadow: rgba(0, 0, 0, 0.5) 0px 1px 3px;
        position: relative;
        width: 100%;
        max-width: 888px;
        margin-left: auto;
        margin-right: auto;
        padding-left: 32px;
        padding-right: 32px;

        @media (max-width: 563px) {
            padding-left: 16px;
            padding-right: 16px;
        }

        .header-actions {
            display: flex;

            a {
                text-decoration: none !important;
            }

            .header-button {
                color: white;
                padding: 8px 20px;
                border: none;
                background: transparent;
                border-radius: 6px;
                font-size: 1rem;
                cursor: pointer;
                outline: none;
            }

            .header-login-button {
                font-weight: 400;
                opacity: 0.75;
                transition: opacity 400ms;

                &:hover {
                    opacity: 1;
                }
            }

            .header-enroll-button {
                position: relative;
                text-shadow: oklch(0.44 0.2 21.89) 0px 1px 1px;
                font-weight: 500;

                .header-buy-background {
                    position: absolute;
                    inset: 0px;
                    background: oklch(0.6 0.3 20.33);
                    border-radius: 6px;
                    transition: transform 750ms;
                    will-change: transform;
                }

                .header-text {
                    position: relative;
                    z-index: 1;
                    color: @color-text;
                }
            }

            .header-enroll-button:hover {
                .header-buy-background {
                    transition: transform 150ms;
                    transform: scale(1.05);
                }
            }
        }
    }
}

section.hero-wrapper {
    position: relative;
    height: 100vh;
    min-height: 750px;
    max-height: 850px;

    .hero-gradient {
        position: absolute;
        z-index: -3;
        top: 50%;
        left: 0px;
        width: 100%;
        height: 50%;
        background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.14) 100%);
    }

    .hero-swoop {
        position: absolute;
        z-index: -2;
        left: 0px;
        right: 0px;
        bottom: -75px;

        path {
            fill: @color-background;
        }
    }

    .hero-content {
        height: 100%;
        min-height: 650px;
        max-height: 750px;
        display: flex;
        flex-direction: column;
        -webkit-box-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        align-items: center;

        @media (max-width: 768px) {
            align-items: flex-start;
            padding: 32px 24px 0px;
        }

        .hero-heading {
            font-size: min(72px, 8vw);
            font-weight: @font-weight-semibold;
            margin: 0px;
            width: max-content;
            text-align: center;
            background-color: rgb(255, 178, 62);
            background-image: linear-gradient(268.67deg, rgb(255, 255, 255) 3.43%, rgb(255, 240, 102) 15.69%, rgb(255, 163, 26) 55.54%, rgb(255, 0, 115) 99%);
            background-size: 100%;
            background-clip: text;
            -webkit-text-fill-color: transparent;

            br {
                display: none;
            }

            @media (max-width: 768px) {
                font-size: 12vw;
                text-align: left;
                line-height: 1.2;

                br {
                    display: block;
                }
            }

        }

        h2.hero-subheading {
            font-size: 30px;
            font-weight: 400;
            max-width: 880px;
            text-align: center;

            @media (max-width: 768px) {
                text-align: left;
                font-size: 21px;

                br {
                    display: none;
                }
            }

            .hero-mobile-text {
                display: none;
            }

            @media (max-width: 500px) {
                .hero-desktop-text {
                    display: none;
                }

                .hero-mobile-text {
                    display: block;
                }
            }
        }

        .hero-author {
            display: flex;
            -webkit-box-align: center;
            align-items: center;
            color: @color-gray-700;
            font-size: 18px;
            cursor: default;

            img {
                width: 50px;
                height: 50px;
                border-radius: 50%;
            }

            a {
                font-weight: 400;
                color: white;
                text-decoration: none;
            }

            a:hover {
                text-decoration: underline 1px;
                text-underline-offset: 2px;
            }
        }
    }
}
/* ... */

